Fix dark mode for crashandgrab, congkak, dewan, foxonthetree, wanderingtowers

--- a/src/css/games/dewan.less
+++ b/src/css/games/dewan.less
@@ -31,6 +31,10 @@ html[data-theme=dark] {
 		color: var(--light-80);
 	}
 
+	.mf_flashinfo {
+		background: linear-gradient(0deg, hsla(0, 0%, 100%, 0), #000 25%, #000 50%, #000 75%, hsla(0, 0%, 100%, 0));
+	}
+
 	.mf_item_back,
 	.mf_item_front {
 		filter: var(--ext-bright);
