--- a/src/css/games/wanderingtowers.less
+++ b/src/css/games/wanderingtowers.less
@@ -33,6 +33,10 @@ html[data-theme=dark] {
 		color: var(--light-80);
 	}
 
+	.wtw_finalTurn {
+		background-color: #185568;
+	}
+
 	.wtw_wizard-panel {
 		filter: var(--drop-shadow);
 	}
